@@ -1,5 +1,7 @@
 3.4
-	+ All not external exceptions from AJAX requests are now shown in
+	+ All non external exceptions from normal requests are now shown
+	  in the UI with the stack trace to report as a bug
+	+ All non external exceptions from AJAX requests are now shown in
 	  the UI with the stack trace to report as a bug
 	+ Template exceptions in normal requests are now handled in webadmin
 	+ Added keepFile parameter to EBox::Downloader::CGI::FromTempDir
